# meb

./: .gitignore  README.md  pyproject.toml
assets/meb website/: index.html  script.js  style.css
examples/: README.md
examples/01-python-simple/: README-EXEMPLE.md  pyproject.toml
examples/02-node-simple/: README-EXEMPLE.md  package.json
examples/03-rust-simple/: Cargo.toml  README-EXEMPLE.md
examples/04-cpp-simple/: CMakeLists.txt  README-EXEMPLE.md  main.cpp
examples/05-go-simple/: README-EXEMPLE.md  go.mod  gohello  main.go
examples/06-java-simple/: README-EXEMPLE.md  pom.xml
examples/06-java-simple/src/main/java/: JavaHello.java
examples/07-full-featured/: README-EXEMPLE.md  README.md  meb.toml  pyproject.toml
examples/07-full-featured/completions/: novaworker.fish
examples/07-full-featured/config/: novaworker.conf
examples/07-full-featured/docs/: novaworker.1
examples/07-full-featured/scripts/: postinst.sh
examples/07-full-featured/themes/dark/: theme.json
examples/07-full-featured/themes/light/: theme.json
examples/08-c-makefile-simple/: Makefile  README-EXEMPLE.md  main.c
scripts/: Dockerfile.builder  build.sh  dev.sh  install.sh  sync-website-install.sh
src/meb/: info.py  meb.py
src/meb/commands/: __init__.py  build.py  check.py  config.py  extras.py  init.py  services.py  version.py
src/meb/detector/: __init__.py  cpp.py  desktop.py  executable.py  go.py  icons.py  java.py  node.py  python.py  rust.py  system.py
