[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meb"
dynamic = ["version"]
description = "Meb est un outils permettant de faire des .deb ( packages debians ) rapidemant et clairement avec differente commandes intuitive directement en CLI terminal."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "yolezz" }
]
dependencies = [
    "typer",
    "rich",
    "tomli-w",
    "questionary",
    "nuitka"
]

[project.urls]
Homepage = "https://meb-cli.pages.dev"
Repository = "https://github.com/yo-le-zz/meb"

# Source unique de vérité pour la version : src/meb/info.py::APP_VERSION.
# build.sh la lit déjà depuis ce même fichier — plus besoin de synchroniser
# une valeur dupliquée ici à chaque bump.
[tool.hatch.version]
path = "src/meb/info.py"
pattern = "APP_VERSION = \"(?P<version>[^\"]+)\""
